--- a/AviasalesSDKTemplate/Resources/pt-PT.lproj/AviasalesTemplateLocalizable.strings
+++ b/AviasalesSDKTemplate/Resources/pt-PT.lproj/AviasalesTemplateLocalizable.strings
@@ -199,5 +199,5 @@
 
 "JR_WAITING_TITLE" = "A pesquisar...";
 "JR_WAITING_ERROR_NOT_FOUND_MESSAGE" = "Não foram encontrados resultados. Tente ajustar os parâmetros da busca.";
-"JR_WAITING_ERROR_CONNECTION_ERROR" = "Erro de conexão (%@)";
-"JR_WAITING_ERROR_NOT_AVALIBLE_MESSAGE" = "Desculpe, o servidor da Jetradar está temporariamente indisponível (%@)";
+"JR_WAITING_ERROR_CONNECTION_ERROR" = "Erro de conexão";
+"JR_WAITING_ERROR_NOT_AVALIBLE_MESSAGE" = "Desculpe, o servidor da Jetradar está temporariamente indisponível";
