--- a/AviasalesSDKTemplate/Resources/ru.lproj/AviasalesTemplateLocalizable.strings
+++ b/AviasalesSDKTemplate/Resources/ru.lproj/AviasalesTemplateLocalizable.strings
@@ -199,5 +199,5 @@
 
 "JR_WAITING_TITLE" = "Ищем билеты...";
 "JR_WAITING_ERROR_NOT_FOUND_MESSAGE" = "Ничего не найдено. Попробуйте изменить параметры поиска.";
-"JR_WAITING_ERROR_CONNECTION_ERROR" = "Ошибка соединения (%@)";
-"JR_WAITING_ERROR_NOT_AVALIBLE_MESSAGE" = "Извините, сервис Aviasales временно недоступен (%@)";
+"JR_WAITING_ERROR_CONNECTION_ERROR" = "Ошибка соединения";
+"JR_WAITING_ERROR_NOT_AVALIBLE_MESSAGE" = "Извините, сервис Aviasales временно недоступен";
