--- a/AviasalesSDKTemplate/Resources/tr.lproj/AviasalesTemplateLocalizable.strings
+++ b/AviasalesSDKTemplate/Resources/tr.lproj/AviasalesTemplateLocalizable.strings
@@ -199,5 +199,5 @@
 
 "JR_WAITING_TITLE" = "Arama sürüyor...";
 "JR_WAITING_ERROR_NOT_FOUND_MESSAGE" = "Sonuç bulunamadı. Arama ölçütlerini değiştirmeyi deneyiniz.";
-"JR_WAITING_ERROR_CONNECTION_ERROR" = "Bağlantı hatası (%@)";
-"JR_WAITING_ERROR_NOT_AVALIBLE_MESSAGE" = "Üzgünüz, JetRadar geçici olarak hizmet dışı (%@)";
+"JR_WAITING_ERROR_CONNECTION_ERROR" = "Bağlantı hatası";
+"JR_WAITING_ERROR_NOT_AVALIBLE_MESSAGE" = "Üzgünüz, JetRadar geçici olarak hizmet dışı";
